<resources>
    <string name="app_name">AccessApp</string>
    <string name="add_photos">Add photos</string>
    <string name="add_poster">Add poster</string>
    <string name="add_members">Add Members</string>
    <string name="add_attendance">Attendance</string>
    <string name="delete">Delete</string>
    <string name="p">TODO</string>
    <string name="pos">TODO</string>
    <string name="m">TODO</string>
    <string name="atten">TODO</string>
    <string name="add_pic">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="t2">TODO</string>
    <string name="t3">TODO</string>
    <string name="t4">TODO</string>
    <string name="g4">TODO</string>
    <string name="m2">TODO</string>
    <string name="m1">TODO</string>
    <string name="poster">poster\n</string>
    <string name="addphoto">addphoto\n</string>
    <string name="addmembers">cmemebers\n</string>
    <string name="upload">Upload</string>
    <string name="add_title">Add Title</string>
    <string name="upload_image">Upload Image</string>
    <string name="preview">preview</string>
    <string name="n">TODO</string>
    <string name="qw">TODO</string>
    <string name="ss">TODO</string>
    <string name="aa">TODO</string>
    <string name="zz">TODO</string>
    <string name="add_gimgr">add_Gimgr</string>
    <string name="gupload">Gupload</string>
    <string name="addMem">\nmembers\n</string>
    <string name="member">Name</string>
    <string name="name">mem\n</string>
    <string name="namemem">Name</string>
    <string name="email_gamil_com">Email@gamil.com</string>
    <string name="post">Post</string>
</resources>