<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:contentDescription="@string/addmembers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".addMembers.AddMember">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/black">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Addmemberimg"
            android:layout_height="160dp"
            android:layout_width="160dp"
            android:scaleType="centerCrop"
            android:background="@drawable/oval"
            android:src="@drawable/addmemberimg"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addmembername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lighto"
                android:hint="@string/namemem"
                android:padding="16dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="#090909"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addmemberEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lighto"
                android:hint="@string/email_gamil_com"
                android:padding="16dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="#090909"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addmemberpost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lighto"
                android:hint="@string/post"
                android:padding="16dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textColorHint="#090909"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="100dp"
            android:outlineAmbientShadowColor="#FF5722">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addmemberBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/orangegcolor"
                android:padding="16dp"
                android:text="Add Member"
                android:textColor="@color/black"
                tools:ignore="HardcodedText,VisualLintButtonSize" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>