<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:contentDescription="@string/add_gimgr"
        android:padding="50dp"
        tools:context=".UploadGallaryImg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/uploadGimg"
                android:layout_width="140dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:outlineSpotShadowColor="#FF5722"
                app:cardElevation="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.453"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="TextSizeCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black">


                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@drawable/oval"
                        android:contentDescription="@string/poster"
                        android:padding="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.277"
                        app:srcCompat="@drawable/baseline_poster" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.703" />

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/Widget.MaterialComponents.Snackbar.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:padding="1dp"
                        android:text="@string/upload_image"
                        android:textColor="#FFFDFD"
                        android:textColorLink="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView1" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Gcategory"
                android:spinnerMode="dropdown"
                android:gravity="center"
                android:background="@android:drawable/btn_dropdown"
                android:layout_marginVertical="16dp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/uploadGimgBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="100dp"
                android:outlineAmbientShadowColor="#FF5722">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gallarybtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/orangegcolor"
                    android:padding="16dp"
                    android:text="Upload"
                    android:textColor="@color/black"
                    tools:ignore="VisualLintButtonSize" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="600dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/GalimgView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/preview"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>